# pulse

./: .env.example  .gitignore  CLAUDE.md  COMPANIES_DATABASE.md  INSTRUCTIONS.md  Makefile  README.md  alembic.ini  load_companies_data.py  pyproject.toml  rebuild_database.py
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 41d7b4e05d76_companies_only_schema.py  79c014adf270_final_schema_with_non_nullable_.py  f00672ea7ee6_companies_with_json_fields.py
apps/dashboard/: package-lock.json  package.json
apps/dashboard/src/: App.test.tsx  App.tsx  ThemeContext.tsx  index.css  index.tsx  setupTests.ts
apps/dashboard/src/components/: PromptInput.tsx  ThemeSwitcher.tsx  VisualizationChart.tsx
apps/dashboard/src/utils/: api.ts
scripts/: README.md  __init__.py  load_companies_data.py  rebuild_database.py
src/pulse/: __init__.py  logging.py  main.py  settings.py
src/pulse/database/: __init__.py  models.py  session.py
src/pulse/middleware/: __init__.py  request_id.py  timing.py
src/pulse/routes/: __init__.py  companies.py  health.py  items.py  visualizations.py
src/pulse/schemas/: __init__.py  companies.py  items.py  users.py  websocket.py
src/pulse/services/: __init__.py  companies.py  items.py  llm.py
src/pulse/utils/: data_normalization.py
tests/: README.md  test_advanced_endpoints.py  test_basic.py  test_demo_auth.py  test_endpoints.py  test_llm_basic.py  test_llm_mock.py  test_llm_visualizations.py
