[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pulse"
version = "0.1.0"
description = "Pulse — a modern FastAPI + React scaffolding for rapid experimentation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pulse Team" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  # Database & Async (SQLite focused)
  "sqlalchemy[asyncio]>=2.0.25",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.0",
  # WebSocket & Real-time
  "websockets>=12.0",
  # Authentication
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.6",
  # Logging & Utilities
  "structlog>=24.1.0",
  "uuid6>=2024.1.12",
  "orjson>=3.10.7",
  "anthropic>=0.68.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "httpx>=0.27",
  "anyio>=4.4",
  "ruff>=0.6",
  "black>=24.8.0",
  "mypy>=1.11",
  # Async testing
  "pytest-asyncio>=0.23.0",
  # Additional dev tools
  "pre-commit>=3.6.0",
]

[project.urls]
homepage = "https://github.com/your-org/pulse"
repository = "https://github.com/your-org/pulse"

[tool.ruff]
line-length = 100
target-version = "py311"

# Linting configuration
lint.select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort (import sorting)
  "B",     # flake8-bugbear
  "UP",    # pyupgrade
  "N",     # pep8-naming
  "ASYNC", # flake8-async
  "S",     # flake8-bandit
  "A",     # flake8-builtins
  "C4",    # flake8-comprehensions
  "PIE",   # flake8-pie
  "RUF",   # ruff-specific rules
]
lint.ignore = [
  "S101", # Allow assert statements
  "B008", # Allow function calls in argument defaults (FastAPI Depends pattern)
  "S104", # Allow binding to all interfaces (0.0.0.0) for development
  "S105", # Allow hardcoded strings (development secrets and token types)
]

# Import sorting configuration (replaces isort)
lint.isort.known-first-party = ["pulse"]
lint.isort.force-single-line = false
lint.isort.lines-after-imports = 2

[tool.black]
line-length = 100


[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_unreachable = true
exclude = ["tests/"]

[tool.hatch.build.targets.wheel]
packages = ["src/pulse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["asyncio: mark test as async"]
testpaths = ["tests"]
